2011-06-01  Simson Garfinkel  <simsong@alphonse-mucha>

	* md5deep/hashTable.c: renamed to hashdeeb/md5deep_hashtable.c

	* man/Makefile.am: moved all man pages into the man directory.

2011-06-01  Simson Garfinkel  <simsong@Alphonse-Mucha.local>

	* hashdeep/sha1.c: made sha1.c include sha1.h but not main.h

2011-05-31  Simson Garfinkel  <simsong@Alphonse-Mucha.local>

	* configure.ac: changed version number to 4.0.0_alpha_000

	* hashdeep/Makefile.am (hashdeep_SOURCES): simplified list of files

	* hashdeep/common.h: __progname is now always extern; on systems that are not GLIBC we include progname.c

	* configure.ac: moved all includes from include/* to hashdeep; there is no reason to have an include/ directory since we are not building a library.
	
	* configure.ac: added AC_PROG_CXX
	

	* hashdeep/Makefile.am (hashdeep_SOURCES): renamed main.c to hashdeep.cpp. Yes, we are now a C++ program!

2011-05-31  Simson Garfinkel  <simsong@it151655.ern.nps.edu>

	* md5deep/display.c: changed #include "main.h" to #include "md5deep.h"

	* hashdeep/main.c: now includes md5deep.h if compiled for MD5DEEP, and main.h if compiled for hashdeep

	* md5deep/md5deep.h: to avoid the name conflict, md5deep/main.h was renamed md5deep/md5deep.h

	* hashdeep/hash.c: changed to use #ifdef MD5DEEP, which is now -D defined by md5deep/Makefile.am

	* hashdeep/Makefile.am (COMMON_SRC): updated to indicate that hash.c, dig.c, cycles.c, ui.c, helpers.c, md5.c, sha1.c, sha256.c, tiger.c, whirlpool.c now reside in this directory

	* md5deep/Makefile.am (whirlpooldeep_SOURCES): moved hash.c, dig.c, cycles.c, ui.c, helpers.c, md5.c, sha1.c, sha256.c, tiger.c, whirlpool.c from common/ to hashdeep/. Updated Makefile.am

	* configure.ac: added initial comments as part of makefile
	changing. The idea is to move C programs from common/ to hashdeep/
	in preparation for removing 'common' and 'md5deep' entirely and
	folding all of the functionality into the hashdeep program.

2011-05-23 Jesse Kornblum
