@@ -1,3 +1,11 @@
+#ifndef STRSEP_H
+#define STRSEP_H
+
+#include <sys/cdefs.h>
+__BEGIN_DECLS
 
 char *
 strsep (char **stringp, const char *delim);
+__END_DECLS
+
+#endif
