@@ -1,50 +1,0 @@
-# The math library is required for floor()
-AM_CPPFLAGS = -DMD5DEEP
-LDADD = -lm
-INCLUDES     = -I@top_srcdir@/hashdeep
-COMMON_DIR   = @top_srcdir@/common
-HASHDEEP_DIR = @top_srcdir@/hashdeep
-
-bin_PROGRAMS=md5deep sha1deep sha256deep tigerdeep whirlpooldeep
-
-COMMON_SRC = \
-${HASHDEEP_DIR}/hash.c     \
-${HASHDEEP_DIR}/dig.c      \
-${HASHDEEP_DIR}/cycles.c   \
-${HASHDEEP_DIR}/ui.c       \
-${HASHDEEP_DIR}/helpers.c  \
-${HASHDEEP_DIR}/progname.c \
-${HASHDEEP_DIR}/files.c    \
-${HASHDEEP_DIR}/md5deep_hashtable.c    
-
-
-base_src=main.c ${COMMON_SRC} \
-                match.c display.c \
-		main.h hashTable.h 
-
-md5deep_SOURCES      =${base_src} ${HASHDEEP_DIR}/md5.c md5deep.c   
-sha1deep_SOURCES     =${base_src} ${HASHDEEP_DIR}/sha1.c sha1deep.c
-sha256deep_SOURCES   =${base_src} ${HASHDEEP_DIR}/sha256.c sha256deep.c
-tigerdeep_SOURCES    =${base_src} ${HASHDEEP_DIR}/tiger.c tigerdeep.c
-whirlpooldeep_SOURCES=${base_src} ${HASHDEEP_DIR}/whirlpool.c whirlpooldeep.c
-
-
-ALL_GOALS={md5,sha1,sha256,tiger,whirlpool}
-
-# We erase the old man pages, just in case they might be symbolic links
-# (symbolic links were used in a previous release)
-install-man: update-manpages
-	rm -f $(DESTDIR)${man1dir}/${ALL_GOALS}deep.1
-	$(MAKE) install-man1
-
-update-manpages: md5deep.1
-	cp $< sha1deep.1
-	cp $< sha256deep.1
-	cp $< tigerdeep.1
-	cp $< whirlpooldeep.1
-
-man_MANS=md5deep.1 sha1deep.1 sha256deep.1 tigerdeep.1 whirlpooldeep.1
-
-EXTRA_DIST=${man_MANS} 
-
-CLEANFILES=md5deep64.exe sha1deep64.exe sha256deep64.exe tigerdeep64.exe whirlpooldeep64.exe
